# latency-based-routing-infrastructure

./: .gitignore  README.md  cdk.context.json  cdk.json  deploy.sh  pyproject.toml
cdk/: pyproject.toml
cdk/latency_based_routing/: app.py  constants.py  latency_based_routing_stack.py  utils.py
cdk/latency_based_routing/hosted_zone_route53/: route_53_hosted_zone_construct.py  route_53_hosted_zone_records_construct.py
cdk/latency_based_routing/webserver_ec2/: ec2_web_server_construct.py
cdk/route_53_latency_health_checks/: app.py  constants.py  route53_latency_health_checks_stack.py  utils.py
cdk/route_53_latency_health_checks/hosted_zone_route53/: route_53_hosted_zone_construct.py  route_53_hosted_zone_records_construct.py
cdk/route_53_latency_health_checks/webserver_ec2/: ec2_web_server_construct.py
tests/helpers/: cfn_reader.py
