[tool.poetry]
name = "latency-based-routing"
version = "0.1.0"
description = "This is a simple project showing how to build the whole infrastructure with latency based routing using Amazon Route 53."
authors = ["sz3jdii <adam.swiatkowski@iodi.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

# 3rdparties
boto3 = "^1.28.62"
botocore = "^1.28.62"
pydantic = "*"
requests = "*"
cachetools = "*"
boto3-stubs = { version = "*", extras = ["cloudformation", "lambda", "route53"] }


[tool.poetry.group.dev.dependencies]
# Internal
latency-based-routing-cdk = {path = "cdk", develop = true}

# 3rdparties
pytest = "*"
pytest-mock = "*"
pytest-dotenv = "*"
pycodestyle = "*"
python-dotenv = "*"
GitPython = "*"
yapf = "*"
pylint = "*"
isort = "*"
"aws-cdk.aws-lambda-python-alpha" = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"