[tool.poetry]
name = "route-53-latency-health-checks-cdk"
version = "0.1.0"
description = "This is a simple project showing how to create health checks for Route53 Latency records."
authors = ["sz3jdii <adam.swiatkowski@iodi.pl>"]
packages = [{ include = "route_53_latency_health_checks" }]

[tool.poetry.dependencies]
python = "^3.12"

# 3rdparties
aws-cdk-lib = ">=2.0.0"
constructs = ">=10.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"